# renice-perf

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-test.yml  build_tests.yml
cmake/: FindReniceOptimizer.cmake
scripts/: install.sh  uninstall.sh
src/: renice.c
systemd/: renice-optimizer.service
